# rustfmsynth

./: Cargo.toml  README.md  algorithm-matrix.js  app.js  crossfader.js  default-patches.json  dial.js  index.html  keyboard-input.js  keyboard-ui.js  operator-controls.js  style.css  synth-processor.js
.github/workflows/: deploy.yml
assets/: index-314Wrwlh.css  index-42FDbMT4.js  index-Bd6EvQEq.js
pkg/: README.md  package.json  rustfmsynth.d.ts  rustfmsynth.js  rustfmsynth_bg.wasm  rustfmsynth_bg.wasm.d.ts
src/: lib.rs  main.rs
src/audio/: cpal_backend.rs  mod.rs
src/input/: keyboard.rs  midi.rs  mod.rs
src/runtime/: mod.rs  native.rs  wasm.rs  wasm_serialize.rs
src/synth/: algorithm.rs  context.rs  core.rs  delayline.rs  diffuser.rs  effect.rs  engine.rs  envelope.rs  filter.rs  mod.rs  note.rs  operator.rs  prelude.rs  reverb.rs  voice.rs  voice_config.rs  waveform.rs
src/wasm/: app.js  index.html  keyboard-input.js  keyboard-ui.js  style.css  synth-processor.js
tests/: algorithm_tests.rs
web/: algorithm-matrix.js  app.js  compression.js  crossfader.js  dial.js  filters.js  index.html  keyboard-input.js  keyboard-ui.js  midi.js  operator-controls.js  package-lock.json  package.json  style.css  synth-processor.js
web/public/: default-patches.json  synth-processor.js
web/src/: App.tsx  config.ts  defaults.ts  index.tsx  keyboardUtils.ts  midiHandlers.ts  state.ts  style.css  synthInputHandler.ts  urlState.ts  utils.ts
web/src/components/: ActiveEffectDisplay.tsx  ActiveFilterDisplay.tsx  Dial.tsx  (+17 more)
web/synth/: package-lock.json  tsconfig.json
(+19 files in other folders)
