[package]
name = "rustfmsynth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.15.3"
eframe = "0.31.1"      # Latest version
rand = "0.9"
device_query = "3.0.1"
midir = "0.10.0"

[lib]
path = "src/lib.rs"
