[package]
name = "rustfmsynth"
version = "0.1.0"
edition = "2021"

[dependencies]
# --- Native only ---
cpal = { version = "0.15.3", optional = true }
midir = { version = "0.10.0", optional = true }
device_query = { version = "3.0.1", optional = true }
rand = { version = "0.9", optional = true }

# --- WebAssembly only ---
wasm-bindgen = { version = "0.2", features = [
  "serde-serialize",
], optional = true }
fastrand = { version = "2.3.0", optional = true }
once_cell = { version = "1.17.0", optional = true }
hashbrown = { version = "0.15.2", optional = true }
js-sys = { version = "0.3", optional = true }

# --- Features ---
[features]
default = ["native"]
native = ["cpal", "midir", "device_query", "rand"]
wasm = ["wasm-bindgen", "fastrand", "once_cell", "hashbrown", "js-sys"]

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = true
